# actix_sqlx_mysql_user_crud

./: Cargo.toml
src/controller/: group_controller.rs  user_controller.rs
src/dao/: db_context.rs  group_dao.rs  user_dao.rs  user_to_group_dao.rs
src/model/: group.rs  user.rs
tests/controller_test/: user_controller_test.rs
tests/dao_test/: group_dao_test.rs  user_dao_test.rs  user_to_group_dao_test.rs
